--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/estilo.css">
     <title>Aula de Git e GitHub</title>
 </head>
 <body>
-    
+    <script src="js/app.js"></script>
 </body>
 </html>
